@@ -1,4 +1,8 @@
-﻿shmuel 16.06.2014 13:38:25 +0200 - build 372
+﻿shmuel 16.06.2014 20:52:25 +0200 - build 373
+
+1. Уточнение 371.
+
+shmuel 16.06.2014 13:38:25 +0200 - build 372
 
 1. FIX: макросы, добавленные с помощью far.MacroAdd, работали с глобальным окружением.
 
